@@ -1,3 +1,8 @@
+2020-01-23  Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/Additions/NSURL+GNUstepBase.m: Handle case where scheme
+	is missing from the URL.
+
 2020-01-20  Fred Kiefer <fredkiefer@gmx.de>
 
 	* Source/NSPredicate.m: Allow simple predicates on NSDate.
